--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services Section with Hover Effects</title>
     <link rel="shortcut icon" href="img/fav-icon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <title>Service Section with Hover Effect</title>
 </head>
 
 <body>
